hphp/test/zend/good/tests-classes/protected_002.php.exp
Call pass::show()
Call fail::show()
HipHop Fatal error: Call to protected method pass::show from context fail in hphp/test/zend/good/tests-classes/protected_002.php on line 18
